# stm32-cmake

./: .directory  .gcc_stm32.cmake.kate-swp  README.mediawiki  gcc_stm32.cmake
stm32f4/cmsis/: .CMakeLists.txt.kate-swp  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  FindSTM32F4_CMSIS.cmake  Makefile  cmake_install.cmake
stm32f4/cmsis/.kdev4/: cmsis.kdev4
stm32f4/examples/stm32f4-nop/: .directory  CMakeLists.txt  main.c
stm32f4/stdperiphf4/: .directory  CMakeCache.txt  CMakeLists.txt  FindSTM32F4_StdPeriphLib.cmake  Makefile  cmake_install.cmake
stm32f4/stdperiphf4/.kdev4/: stdperiphf4.kdev4
stm32f4/stdperiphf4/STM32F4xx_DSP_StdPeriph_Lib_V1.0.0/Project/STM32F4xx_StdPeriph_Examples/: .directory
stm32f4/stdperiphf4/STM32F4xx_DSP_StdPeriph_Lib_V1.0.0/Project/STM32F4xx_StdPeriph_Examples/ADC/ADC3_DMA/: main.c  stm32f4xx_conf.h  stm32f4xx_it.h
stm32f4/stdperiphf4/STM32F4xx_DSP_StdPeriph_Lib_V1.0.0/Project/STM32F4xx_StdPeriph_Examples/ADC/DualADC_Interleaved_DMAmode3/: main.c  stm32f4xx_it.h
stm32f4/stdperiphf4/STM32F4xx_DSP_StdPeriph_Lib_V1.0.0/Project/STM32F4xx_StdPeriph_Examples/ADC/DualADC_RegulSimu_DMAmode1/: readme.txt
stm32f4/stdperiphf4/STM32F4xx_DSP_StdPeriph_Lib_V1.0.0/Project/STM32F4xx_StdPeriph_Examples/ADC/TripleADC_Interleaved_DMAmode2/: stm32f4xx_conf.h  stm32f4xx_it.c
stm32f4/stdperiphf4/STM32F4xx_DSP_StdPeriph_Lib_V1.0.0/Project/STM32F4xx_StdPeriph_Examples/CAN/LoopBack/: stm32f4xx_conf.h  stm32f4xx_it.c
stm32f4/stdperiphf4/STM32F4xx_DSP_StdPeriph_Lib_V1.0.0/Project/STM32F4xx_StdPeriph_Examples/CAN/Networking/: stm32f4xx_it.h
stm32f4/stdperiphf4/STM32F4xx_DSP_StdPeriph_Lib_V1.0.0/Project/STM32F4xx_StdPeriph_Examples/CRC/CRC_Example/: main.c
stm32f4/stdperiphf4/STM32F4xx_DSP_StdPeriph_Lib_V1.0.0/Project/STM32F4xx_StdPeriph_Examples/CRYP/AES_ECBmode_DMA/: readme.txt
stm32f4/stdperiphf4/STM32F4xx_DSP_StdPeriph_Lib_V1.0.0/Project/STM32F4xx_StdPeriph_Examples/CRYP/AES_modes/: stm32f4xx_it.h
stm32f4/stdperiphf4/STM32F4xx_DSP_StdPeriph_Lib_V1.0.0/Project/STM32F4xx_StdPeriph_Examples/CRYP/DES_TDES_modes/: stm32f4xx_conf.h
stm32f4/stdperiphf4/STM32F4xx_DSP_StdPeriph_Lib_V1.0.0/Project/STM32F4xx_StdPeriph_Examples/CRYP/TDES_ECBmode_DMA/: stm32f4xx_it.c
stm32f4/stdperiphf4/STM32F4xx_DSP_StdPeriph_Lib_V1.0.0/Project/STM32F4xx_StdPeriph_Examples/CortexM/BitBand/: main.c  stm32f4xx_conf.h  stm32f4xx_it.c
stm32f4/stdperiphf4/STM32F4xx_DSP_StdPeriph_Lib_V1.0.0/Project/STM32F4xx_StdPeriph_Examples/CortexM/Mode_Privilege/: main.c
stm32f4/stdperiphf4/STM32F4xx_DSP_StdPeriph_Lib_V1.0.0/Project/STM32F4xx_StdPeriph_Examples/DAC/DAC_SignalsGeneration/: stm32f4xx_it.h
stm32f4/stdperiphf4/STM32F4xx_DSP_StdPeriph_Lib_V1.0.0/Project/STM32F4xx_StdPeriph_Examples/DCMI/Camera/: dcmi_ov2640.c  main.h  stm32f4xx_it.c
stm32f4/stdperiphf4/STM32F4xx_DSP_StdPeriph_Lib_V1.0.0/Project/STM32F4xx_StdPeriph_Examples/DMA/FLASH_RAM/: main.h  stm32f4xx_it.c
stm32f4/stdperiphf4/STM32F4xx_DSP_StdPeriph_Lib_V1.0.0/Project/STM32F4xx_StdPeriph_Examples/EXTI/EXTI_Example/: stm32f4xx_conf.h  stm32f4xx_it.c  stm32f4xx_it.h
stm32f4/stdperiphf4/STM32F4xx_DSP_StdPeriph_Lib_V1.0.0/Project/STM32F4xx_StdPeriph_Examples/FLASH/Write_Protection/: main.c  readme.txt  stm32f4xx_it.c  stm32f4xx_it.h
stm32f4/stdperiphf4/STM32F4xx_DSP_StdPeriph_Lib_V1.0.0/Project/STM32F4xx_StdPeriph_Examples/FSMC/SRAM/: stm32f4xx_conf.h  stm32f4xx_it.c
stm32f4/stdperiphf4/STM32F4xx_DSP_StdPeriph_Lib_V1.0.0/Project/STM32F4xx_StdPeriph_Examples/FSMC/SRAM_DataMemory/: main.c  readme.txt  stm32f4xx_it.h
stm32f4/stdperiphf4/STM32F4xx_DSP_StdPeriph_Lib_V1.0.0/Project/STM32F4xx_StdPeriph_Examples/GPIO/IOToggle/: stm32f4xx_conf.h  stm32f4xx_it.c
stm32f4/stdperiphf4/STM32F4xx_DSP_StdPeriph_Lib_V1.0.0/Project/STM32F4xx_StdPeriph_Examples/HASH/SHA1_MD5_DMA/: readme.txt  stm32f4xx_it.c
stm32f4/stdperiphf4/STM32F4xx_DSP_StdPeriph_Lib_V1.0.0/Project/STM32F4xx_StdPeriph_Examples/I2C/EEPROM/: readme.txt  stm32f4xx_conf.h
stm32f4/stdperiphf4/STM32F4xx_DSP_StdPeriph_Lib_V1.0.0/Project/STM32F4xx_StdPeriph_Examples/I2C/IOE/: readme.txt  stm32f4xx_conf.h
stm32f4/stdperiphf4/STM32F4xx_DSP_StdPeriph_Lib_V1.0.0/Project/STM32F4xx_StdPeriph_Examples/I2S/Audio/: stm32f4xx_it.c
stm32f4/stdperiphf4/STM32F4xx_DSP_StdPeriph_Lib_V1.0.0/Project/STM32F4xx_StdPeriph_Examples/IWDG/IWDG_Example/: stm32f4xx_it.h
stm32f4/stdperiphf4/STM32F4xx_DSP_StdPeriph_Lib_V1.0.0/Project/STM32F4xx_StdPeriph_Examples/Lib_DEBUG/Lib_DEBUG_Example/: readme.txt  stm32f4xx_ip_dbg.c
stm32f4/stdperiphf4/STM32F4xx_DSP_StdPeriph_Lib_V1.0.0/Project/STM32F4xx_StdPeriph_Examples/NVIC/DMA_WFIMode/: stm32f4xx_conf.h  stm32f4xx_it.h
stm32f4/stdperiphf4/STM32F4xx_DSP_StdPeriph_Lib_V1.0.0/Project/STM32F4xx_StdPeriph_Examples/NVIC/IRQ_Mask/: main.c
stm32f4/stdperiphf4/STM32F4xx_DSP_StdPeriph_Lib_V1.0.0/Project/STM32F4xx_StdPeriph_Examples/NVIC/IRQ_Priority/: readme.txt  stm32f4xx_conf.h
stm32f4/stdperiphf4/STM32F4xx_DSP_StdPeriph_Lib_V1.0.0/Project/STM32F4xx_StdPeriph_Examples/NVIC/VectorTable_Relocation/: stm32f4xx_conf.h  stm32f4xx_it.c
stm32f4/stdperiphf4/STM32F4xx_DSP_StdPeriph_Lib_V1.0.0/Project/STM32F4xx_StdPeriph_Examples/PWR/BOR/: readme.txt
stm32f4/stdperiphf4/STM32F4xx_DSP_StdPeriph_Lib_V1.0.0/Project/STM32F4xx_StdPeriph_Examples/PWR/CurrentConsumption/: stm32f4xx_lp_modes.c
stm32f4/stdperiphf4/STM32F4xx_DSP_StdPeriph_Lib_V1.0.0/Project/STM32F4xx_StdPeriph_Examples/PWR/PVD/: main.c  (+1 more)
stm32f4/stdperiphf4/STM32F4xx_DSP_StdPeriph_Lib_V1.0.0/Project/STM32F4xx_StdPeriph_Templates/: .directory
stm32f4/stdperiphf4/STM32F4xx_DSP_StdPeriph_Lib_V1.0.0/Project/STM32F4xx_StdPeriph_Templates/EWARM/: Project.ewp  stm32f4xx_flash_extsram.icf
stm32f4/stdperiphf4/STM32F4xx_DSP_StdPeriph_Lib_V1.0.0/Project/STM32F4xx_StdPeriph_Templates/MDK-ARM/: Project.uvopt
stm32f4/stdperiphf4/STM32F4xx_DSP_StdPeriph_Lib_V1.0.0/Utilities/STM32_EVAL/Common/: Release_Notes.html  lcd_log_conf_template.h
stm32f4/stdperiphf4/STM32F4xx_DSP_StdPeriph_Lib_V1.0.0/Utilities/STM32_EVAL/STM3240_41_G_EVAL/: stm324xg_eval.c  stm324xg_eval_fsmc_sram.h  stm324xg_eval_lcd.h
(+500 files in other folders)
